Tue Apr 29 08:05:06 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c src/tds/unittests/flags.c:
	- use expression flag in COLINFO

Mon Apr 28 23:35:11 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c src/tds/unittests/flags.c:
	- process correctly COLINFO (TDS 4.2)
	- fix flag test for TDS4.2

Mon Apr 28 21:35:21 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/token.c src/tds/unittests/.cvsignore:
	* src/tds/unittests/Makefile.am src/tds/unittests/flags.c(added):
	- check flags detected by libTDS (not finished)

Mon Apr 28 12:05:30 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: workaround for buggy sybase server

Sun Apr 27 20:34:44 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/odbc/connectparams.c src/tds/config.c:
	- cleanup

Sun Apr 27 19:57:21 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/config.c: cleanup

Sun Apr 27 16:47:18 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix problem with RPC returning result

Sun Apr 27 13:16:50 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* acinclude.m4: fix for HP/UX 11 getpwuid_r detect
	* src/tds/convert.c: portability and a comment

Fri Apr 25 20:49:00 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: remove a TODO
	
Fri Apr 25 20:33:21 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- fix wrong version reading using mssql with tds 4.2
	- remove memory leak if text is too large

Fri Apr 25 19:04:52 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/convert_tds2sql.c:
	* src/odbc/prepare_query.c:
	- applied patch #727555 for binary data

Fri Apr 25 14:12:46 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/unittests/t0003.c:
	- fix test (broken...)

Fri Apr 25 13:52:51 CET 2003  Frediano Ziglio <freddy77@angelfire.com>